[Closes eo:#2] Prevent overwide blog posts from pushing sidebar column below content on IE
git-svn-id: https://svn.socialplanning.org/svn/vendor/wordpress-mu/openplans/trunk@20443 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/wp-content/themes/openplans/style.css
+++ b/wp-content/themes/openplans/style.css
@@ -34,6 +34,7 @@ Author: Nick Grossman & Rolando Pe–ate
 .oc-blog-post {
   margin: 0 0 2.5em;
   padding: 0;
+  overflow: hidden;
 }
 .oc-blog-headingBlock {
   margin-bottom: 0.5em;
